sufficient color contrast fix

--- a/css/style.scss
+++ b/css/style.scss
@@ -39,7 +39,7 @@ body {
     align-items: center;
     row-gap: 1.4rem;
     background-color: var(--White);
-    max-width: 19rem;
+    max-width: 20rem;
     padding: 0.9rem;
 }
 
@@ -53,7 +53,7 @@ body {
 
 .card-text {
     font-size: 15px;
-    color: var(--GrayishBlue);
+    color: var(--DarkBlue);
     text-align: center;
     overflow-wrap: break-word;
     margin-bottom: 0rem;
@@ -62,7 +62,7 @@ body {
     font-weight: 400;
     margin-left: 0.9rem;
     margin-right: 0.9rem;
-     margin-bottom: 30.2px;
+     margin-bottom: 28px;
 }
 
 .qr-image {
